<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="login_prompt">Login to get started</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="ahoy">Ahoy</string>
    <string name="welcome_message">Welcome aboard me hearties!</string>
    <string name="lets_go">LET\'S GO!</string>
    <string name="treasure_burial">Treasure Burial</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="title_activity_treasure_hunt">Map</string>
    <string name="available_waypoints">Available waypoints</string>
    <string name="hunt_name_placeholder">Treasure Hunt Placeholder</string>
    <string name="hunt_difficulty_placeholder">EASY</string>
    <string name="hunt_distance_placeholder">1.2 mi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waypoint_placeholder">Waypoint name</string>
    <string name="coord_placeholder">35.42197</string>
    <string name="details">Details</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna eros quis urna.
Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Proin pharetra nonummy pede. Mauris et orci.
Aenean nec lorem. In porttitor. Donec laoreet nonummy augue.
Suspendisse dui purus, scelerisque at, vulputate vitae, pretium mattis, nunc. Mauris eget neque at sem venenatis eleifend. Ut nonummy.
Fusce aliquet pede non pede. Suspendisse dapibus lorem pellentesque magna. Integer nulla.
Donec blandit feugiat ligula. Donec hendrerit, felis et imperdiet euismod, purus ipsum pretium metus, in lacinia nulla nisl eget sapien. Donec ut est in lectus consequat consequat.
Etiam eget dui. Aliquam erat volutpat. Sed at lorem in nunc porta tristique.

</string>
    <string name="solve_waypoint">Solve Waypoint!</string>
    <string name="coords">Coordinates</string>
    <string name="description">Description</string>
    <string name="coords_placeholder">35.51497, 33.01792</string>
    <string name="your_task">Your Task</string>
    <string name="tasks_placeholder">Tasks 1…</string>
    <string name="more">More</string>
    <string name="navigate">Navigate</string>
    <string name="puzzle_solved">Puzzle Solved!</string>
    <string name="try_again">Try again!</string>
    <string name="game_finished">Congratulations! You\'ve finished this game</string>
    <string name="whats_your_answer">What\'s your answer?</string>
    <string name="go">Go!</string>
    <string name="cancel">Cancel</string>
    <string name="enter_solution">Solution...</string>
    <string name="can_you_solve_it">Can you solve it?</string>
    <string name="th_details">Treasure Hunt Details</string>
    <string name="difficulty">Difficulty:</string>
    <string name="th_preview">Treasure Hunt Preview</string>
    <string name="created_by">Hidden by</string>
    <string name="available_points">Available points:</string>
    <string name="start_hunting">Start Hunting!</string>
    <string name="hunt_author_placeholder">by Indiana Jones</string>
    <string name="create_new_account">Create new account</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="treasure_burial_mode_welcome">Treasure Burial mode</string>
    <string name="treasure_burial_mode_instructions">
        Welcome to the Treasure Burial mode, it\'s great to have you onboard!
        \n\nThis is the mode where you get to go out and bury a treasure for some other buccaneer to find.
        \n\nBy playing this mode you are actively contributing to the game\'s community and you are awarded points for every treasure you hide.
        \n\nAll you need to do is go out, find some interesting location you want to share with the world, and bury your virtual treasure there. Then construct a virtual path of waypoints (clues) leading to that location, and that\'s all there is to it!
    </string>
    <string name="aye_aye_lets_go">Aye aye! Let\'s go!</string>
    <string name="ahoy_matey">Ahoy Matey!</string>
    <string name="mark_as_final">Mark as final location</string>
    <string name="add_another_waypoint">Add another waypoint</string>
    <string name="save_waypoint">Save waypoint</string>
    <string name="waypoint_num">Waypoint # %1d</string>
    <string name="waypoint_name">Waypoint Name</string>
    <string name="enter_waypoint_name">What is the name of this waypoint?</string>
    <string name="waypoint_description">Waypoint description</string>
    <string name="enter_waypoint_description">Enter some information about this location</string>
    <string name="waypoint_task">Waypoint Task</string>
    <string name="enter_waypoint_task">What is the hunter\'s task at this location?</string>
    <string name="waypoint_solution">Waypoint solution</string>
    <string name="enter_waypoint_solution">What is the expected solution for this task?</string>
    <string name="waypoint_coords">Waypoint Coordinates</string>
    <string name="enter_manually">Enter manually</string>
    <string name="use_current_location">Use my location</string>
    <string name="waypoint_loc_preview">Waypoint Location Preview</string>
    <string name="enter_coords">Enter Coordinates</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="done">Done</string>
    <string name="not_set"><i>Not yet set</i></string>
    <string name="please_wait">Please wait...</string>
    <string name="getting_current_location">Getting current location</string>
    <string name="cannot_be_blank">Cannot be blank!</string>
    <string name="wrong_coords">Incorrect coordinates</string>
    <string name="th_name">Treasure Hunt Name</string>
    <string name="enter_th_name">Give your Treasure Hunt a name</string>
    <string name="enter_th_desc">Enter a description for your Treasure Hunt</string>
    <string name="th_desc">Treasure Hunt Description</string>
    <string name="th_difficulty">Difficulty Rating: </string>
    <string name="finalise_treasure_burial_instructions">
        All the waypoints and the final treasure location have now been recorded.
        \n\nNow enter some final details about the Treasure Hunt you just created.
        \n\nMake sure that you describe what is interesting about it and what you are trying to teach the hunters through this excursion.
        \n\nAfter publishing the Treasure Hunt, you will be awarded 10 Pirate Points for helping the community grow.
    </string>
    <string name="publish_th">Publish Treasure Hunt!</string>
    <string name="select_diff">Select a difficulty rating</string>
    <string name="aprox_route">Approximate Treasure Hunt Route:</string>
    <string name="congrats">Congratulations!</string>
    <string name="finish_game_body">
        You have found the treasure and completed this game!
    </string>
    <string name="hooray">Hooray!</string>
    <string name="upload_treasure_hunt">
        Your Treasure Hunt is now published!
        \nHunters will soon start looking for your treasure!
        \n\nThank you for contributing to the game\'s community.
        \nYou have been awarded 20 Pirate Points
    </string>
    <string name="exit_promt">Do you really wish to exit?</string>
    <string name="select_game_mode">Select a game mode to get started</string>
    <string name="my_account">My Account</string>
    <string name="pirate_name">Pirate name: </string>
    <string name="username_placeholder">Username</string>
    <string name="user_email">Email:</string>
    <string name="score_placeholder">Score</string>
    <string name="pirate_score">Pirate Score:</string>
    <string name="logout">Logout</string>
    <string name="signout_promt">Do you really wish to sign out?</string>
    <string name="number_placeholder">98</string>
    <string name="pirate_points">Pirate Points</string>
    <string name="cost">Cost:</string>
    <string name="oh_no">Oh no!</string>
    <string name="go_back">Go Back</string>
    <string name="not_enough_points">
        It seems like you do not have enough points to attend this Treasure Hunt!
        \nTry attending an easier game that requires a lower score, or go hide your own treasures in Treasure Burial mode to get lots of Pirate Points!
    </string>
    <string name="distance_from_me">
        %1$d%2$s %3$s
    </string>
    <string name="distance_from_me_string">
        %1$s%2$s %3$s
    </string>
    <string name="already_solved">You have already found this treasure</string>
    <string name="about">About</string>
    <string name="about_body">
        This app was build by the foreseen developer as the final undergraduate project during his studies at Swansea University 2020-2021
        \n\nThe project was developed under the CSP354/CSP344 - Project Specification and Development module and was supervised by Dr. Jennifer Pearson
        \n\nThe development took place entirely in Android Studio using the Kotlin language using standard Android libraries, Google Material Libraries and the Google Maps API
        \n\nThe login/signup service relies on Firebase Authentication and all user and game data is stored online at Firebase Firestore servers in western Europe.
    </string>
    <string name="app_version">Version %1$s</string>
    <string name="developed_by">Developed by</string>
    <string name="his_majesty">Constantinos Tefkros Loizou</string>
    <string name="student_email">962355@swansea.ac.uk</string>
    <string name="credits_attributions">Credits and Attributions</string>
    <string name="credits">
        This app makes use of the Android Material Icons Library licensed under the Apache Licence 2.0, in addition to other icons as follows:
        \n\nThe App Icon and all other graphics of this app have been sourced from flaticon - https://www.flaticon.com under their Flaticon License, which allows for free use for personal and commercial purposes with appropriate attribution.
        \n\nFlaticon creators of graphics used in this app:
        \nFreepik, Smashicons, Nhor Phai, Becris, Nikita Golubev,
    </string>
    <string name="help_label">Help</string>
    <string name="completed_games">My Completed Games</string>
    <string name="my_stats">My Pirate Statistics</string>
</resources>