<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/item_completedGames"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/completed_games" />

        <item
            android:id="@+id/item_stats"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/my_stats" />

    </group>

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout" />

    <group>
        <item
            android:id="@+id/item_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help_label" />

        <item
            android:id="@+id/item_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about" />
    </group>

</menu>