<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".TreasureHuntDetailsActivity">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:id="@+id/vgTreasureHuntDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTreasureHuntDetails_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/treasure_hunt"
            android:textSize="26sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTreasureHuntDetails_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hunt_author_placeholder" />

        <View style="@style/Divider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/difficulty" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTreasureHuntDetails_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/hunt_difficulty_placeholder" />

        <View style="@style/Divider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_points" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTreasureHuntDetails_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:scrollbars="vertical"
            android:text="@string/available_points" />

        <View style="@style/Divider" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTreasureHuntDetails_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:scrollbars="vertical"
            android:text="@string/lorem" />


    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnSolveWaypoint"
        android:layout_below="@+id/vgTreasureHuntDetails"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="25dp">

        <fragment
            android:id="@+id/mapTreasureHuntPreview"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TreasureHuntDetailsActivity" />

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSolveWaypoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorAccent"
        android:onClick="startTreasureHunt"
        android:text="@string/start_hunting" />

</com.google.android.material.circularreveal.CircularRevealRelativeLayout>